fix: line spacing

--- a/src/css/headings-and-paragraphs.scss
+++ b/src/css/headings-and-paragraphs.scss
@@ -60,7 +60,7 @@ p {
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
-  line-height: 21.4px; /* 133.75% */
+  line-height: 1.6; /* Improved readability */
   letter-spacing: -0.08px;
   margin-top: 1em;
   margin-bottom: 1em;
